--- a/smartcab.ipynb
+++ b/smartcab.ipynb
@@ -233,11 +233,11 @@
    "source": [
     "**Answer:**\n",
     "\n",
-    "- **safety**: The color of `light` is safety concerned, it relates to the traffic regulation violation. And the input of `right, left and oncoming` are also safety concerned, they are related to accident such as collision.\n",
+    "- **safety**: The color of `light` is safety concerned, it relates to the traffic regulation violation. You should stop going forward and making left turn when the traffic light is red. And the input of `right, left and oncoming` are also safety concerned, because the direction of travel for other traffic can lead to collision.\n",
     "\n",
-    "- **efficiency**: The `waypoint` feature is efficiency concerned.\n",
+    "- **efficiency**: The `waypoint` feature is efficiency concerned. This feature can make sure the smartcab reach the desination in the most efficient way.\n",
     "\n",
-    "- `Deadline` is not selected as feature in q-learning because it dose not contribute to either safety or efficiency."
+    "- `Deadline` is not selected as feature in q-learning because it dose not contribute to safety. Firstly, it may seems to be related to efficiency, it tells number of remaining actions to reach destination, however, the remaining actions is constantly variating, becuase the state of each intersection are changing all the time, I doubt the agent will not be able to learn this feature. Secondly, adding this feature will explode the state space due to curse of dimentionality. The deadline will have a size of (number of intersections multiplied by time steps per intersection), which will dramatically increase the state space.      "
    ]
   },
   {
@@ -499,6 +499,7 @@
     "**Answer:** \n",
     "\n",
     "- Optimal policy are summarized as following:\n",
+    "    - If the lights are green, following the waypoint\n",
     "    - If the lights are red and waypoint is not `right`, choose None\n",
     "    - If lights are red and waypoint is `right`, turn right when left traffic is not `forward`; or going `forward` when left or right traffic is not `forward`; or turn left when oncoming is not `forward`.\n",
     "\n",
@@ -537,7 +538,7 @@
     " - None : -0.16\n",
     " - left : 0.02\n",
     "\n",
-    "Smartcab goes forward at green light, instead of turning to the waypoint (right), it is not correct.\n",
+    "Smartcab goes forward at green light, instead of turning to the waypoint (right), it is not correct. I am not sure why the agent does not learn the suboptimal policy this time, it seems at green light, taking any action other than idling will recieve positive rewards, but it does not follow the waypoint.\n",
     "\n"
    ]
   },
